--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,6 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    line-height: calc(24/16);
     color: var(--color-main);
     background-color: var(--color-main-bg);
 }
@@ -57,13 +56,14 @@ ul {
     color: var(--color-dark);
 }
 
-.logo>span {
+.logo-brand {
     color: var(--color-primary-brand);
 }
 
 .top-nav {
     font-weight: 500;
     letter-spacing: 0.02em;
+    line-height: calc(24/16);
     color: var(--color-title);
 }
 
@@ -74,6 +74,8 @@ ul {
 
 .top-nav-address {
     font-style: normal;
+    line-height: calc(24/16);
+    letter-spacing: 0.02em;
     color: var(--color-main);
 }
 
@@ -134,6 +136,7 @@ ul {
 }
 
 .features-text {
+    line-height: calc(24/16);
     letter-spacing: 0.02em;
 }
 
@@ -181,6 +184,7 @@ ul {
 }
 
 .team-card-descr {
+    line-height: calc(24/16);
     letter-spacing: 0.02em;
 }
 
@@ -200,11 +204,8 @@ ul {
     color: var(--color-footer-logo);
 }
 
-.logo-footer>span {
-    color: var(--color-primary-brand);
-}
-
 .footer-descr {
+    line-height: calc(24/16);
     letter-spacing: 0.02em;
     color: var(--color-footer-text);
 }
@@ -214,6 +215,8 @@ ul {
 .filtr-button {
     font-family: inherit;
     font-weight: 500;
+    font-size: 16px;
+    line-height: calc(24/16);
     letter-spacing: 0.04em;
     color: var(--color-primary-brand);
     background-color: var(--color-section-bg);
@@ -239,5 +242,6 @@ ul {
 }
 
 .portfolio-descr {
+    line-height: calc(24/16);
     letter-spacing: 0.02em;
 }
